syntax = "proto3";

package csw_params;

import "csw_params/parameter_types.proto";
import "csw_params/units.proto";
import "csw_params/keytype.proto";
import "scalapb/scalapb.proto";

message PbParameter {
    string name = 1;
    PbUnits units = 2 [(scalapb.field).type = "csw.units.Units"];
    PbKeyType keyType = 3;
    Items items = 4;
}

message PbSetup {
    repeated PbParameter params = 1;
}
